[package]
name = "place_macro"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Macros you wish you had while you were writing your non-proc macro."
repository = "https://github.com/BonnyAD9/place_macro/tree/master"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
litrs = "0.4.0"
