[package]
name = "place_macro"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "Macros you wish you had while you were writing your non-proc macro."
repository = "https://github.com/BonnyAD9/place_macro/tree/master"
readme = "README.md"

[workspace]
members = [
    "place_macro_core",
    "place_macro_proc"
]

[dependencies]
place_macro_proc = { path = "place_macro_proc" }
