[package]
name = "place_macro_core"
version = "1.0.0"
edition = "2024"
license-file = "../LICENSE"
description = "This crate contains implementation of procedural macros for place_macro."
repository = "https://github.com/BonnyAD9/place_macro/tree/master"
readme = "../README.md"

[dependencies]
convert_case = "0.6.0"
litrs = "0.4.1"
proc-macro2 = "1.0.71"
